--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
     <!---------------------------------Footer-------------------------->
     <div class="footer">
-      <p>Copyright 2022- Ojaswi Sharma BUIT Website.</p>
+      <p>Copyright 2022- Rishabh Singh BUIT Website.</p>
     </div>
   </body>
 </html>
